--- a/.github/workflow/pre-release.yml
+++ b/.github/workflow/pre-release.yml
@@ -1,8 +1,7 @@
 on:
   push:
     tags:
-    - "v[0-9]+.[0-9]+.[0-9]+-(alpha|beta|preview|rc)[0-9][0-9][0-9]"
-jobs:
+    - "v[0-9]+.[0-9]+.[0-9]+-(alpha|beta|preview|rc)[0-9]{0,3}"
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 15
