--- a/RetryLib/RetryLib.csproj
+++ b/RetryLib/RetryLib.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>DotNetExtras.Retry</AssemblyName>
     <RootNamespace>DotNetExtras.Retry</RootNamespace>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Title>$(AssemblyName)</Title>
     <Authors>Alek Davis</Authors>
     <Description>A .NET Core library implementing retry operations.</Description>
@@ -21,6 +21,7 @@
     <IncludeSourceRevisionInInformationalVersion>False</IncludeSourceRevisionInInformationalVersion>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageReleaseNotes>Improved documentation, no functional changes.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
